# MarketSelection

./: .gitignore  AUDIT_DIFF_REPORT.txt  CITATION.cff  CODE_GUIDE.md  CONTRIBUTING.md  GUIDE.md  LICENSE  METHODOLOGY.md  PARAMETERS.md  README.md  config.yaml  environment.yml  pyproject.toml  requirements.txt
data/sample/: bg_features_nyc.csv  geocode_cache.json  nyc_block_groups_2021.shp  nyc_block_groups_2021.shx  nyc_blocks_only.shx  stores_template.csv
docs/: guide.html  index.html  methodology.html  parameters.html
docs/maps/: ALL_T_aggregated_map_bg.html
scripts/: GitHubClusterMapNYC.py  GitHubMonteCarlo.py  GitHubOptimalSelection.py  GitHubStressTest.py  _config.py  publish_maps.py  run_all.py
src/nyc_site_selection/: __main__.py
